Implementation of the edit feature

--- a/app/views/portfolios/edit.html.erb
+++ b/app/views/portfolios/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Créer un nouveau Portfolio Item</h1>
+<h1>Modifier un Portfolio Item</h1>
 <%= form_for(@portfolio_item) do |f| %>
   
   <div class="field">
