--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -3,9 +3,12 @@
 <%= link_to "Créer un nouveau portfolio item", new_portfolio_path %>
 
 <% @portfolio_items.each do |portfolio_item| %>
-    <p><%= portfolio_item.title %></p>
+
+    <h1><%= link_to portfolio_item.title, portfolio_path(portfolio_item) %></h1>
     <p><%= portfolio_item.subtitle %></p>
     <p><%= portfolio_item.body %></p>
     <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
-    <%= link_to "Editer le portfolio item", edit_portfolio_path(portfolio_item.id) %>
+
+<br>
+    <%= link_to "Editer le portfolio item", edit_portfolio_path(portfolio_item) %>
 <% end %>
