--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -11,4 +11,5 @@
 
 <br>
     <%= link_to "Editer le portfolio item", edit_portfolio_path(portfolio_item) %>
+    <%= link_to 'Supprimer', portfolio_path(portfolio_item), method: :delete, data: { confirm: 'Etes vous sur?' } %>
 <% end %>
