--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -20,13 +20,25 @@
     <%= f.label :main_image %>
     <%= f.text_area :main_image %>
   </div>
-  
+    
+    <div>
+        <p> previsualisation de l'image principal</p>
+        <%= image_tag @portfolio_item.main_image %>
+    </div>
   <div class="field">
     <%= f.label :thumb_image %>
     <%= f.text_field :thumb_image %>
   </div>
+    
+    <div>
+        <p> previsualisation de la thumb image</p>
+        <%= image_tag @portfolio_item.main_image %>
+    </div>
 
   <div class="actions">
     <%= f.submit %>
   </div>
+
+
+  
 <% end %>
