--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -32,7 +32,7 @@
     
     <div>
         <p> previsualisation de la thumb image</p>
-        <%= image_tag @portfolio_item.main_image %>
+        <%= image_tag @portfolio_item.thumb_image %>
     </div>
 
   <div class="actions">
