Add session tracker dynamic sourcelink

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,5 +24,8 @@
         
       <% end %>
     <%= yield %>
+      <% if session[:source] %>
+        <p>Merci de visiter mon site depuis <%= session[:source] %></p>
+      <% end %>
   </body>
 </html>
