Add partials for form and bar bug on the delete function of the portfolio signal

--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -17,7 +17,7 @@
       
     <%= yield %>
       
-       <%= render "shared/nav" %>
+       <%= render "shared/nav", location: 'bottom' %>
       
       <% if session[:source] %>
         <p>Merci de visiter mon site depuis <%= session[:source] %></p>
