--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class="<%= location %>">
     <div><%= link_to "Home", root_path %></div>
     <div><%= link_to "A propos de moi", about_me_path %></div>
     <div><%= link_to "Contact", contact_path %></div>
