Add content_tag helper methods

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,24 +4,16 @@
     <title><%= @page_title %></title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-      
     <meta name="keywords" content="<%=@seo_keywords %>" />
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-      
       <%= render "shared/nav", location: 'top' %>
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
-      
       <%= yield %>
-      
-      <% if session[:source] %>
-        <p>Merci de visiter mon site depuis <%= session[:source] %></p>
-      <% end %>
-      
+     <%= source_helper("site") %>
   </body>
 </html>
