--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -4,23 +4,15 @@
     <title><%= @page_title %></title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-      
     <meta name="keywords" content="<%=@seo_keywords %>" />
-
     <%= stylesheet_link_tag    'blogs', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'blogs', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
       <p class="notice"><%= notice %></p>       
       <p class="alert"><%= alert %></p>
-      
-    <%= yield %>
-      
+        <%= yield %>
        <%= render "shared/nav", location: 'bottom' %>
-      
-      <% if session[:source] %>
-        <p>Merci de visiter mon site depuis <%= session[:source] %></p>
-      <% end %>
+      <%= source_helper("blog") %>
   </body>
 </html>
