--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -4,25 +4,15 @@
     <title><%= @page_title %></title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-      
     <meta name="keywords" content="<%=@seo_keywords %>" />
-
     <%= stylesheet_link_tag    'portfolios', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'portfolios', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
       <%= render "shared/nav", location: 'top' %>
-      
       <p class="notice"><%= notice %></p>       
       <p class="alert"><%= alert %></p>
-      
-    <%= yield %>
-      
-      
-      
-      <% if session[:source] %>
-        <p>Merci de visiter mon site depuis <%= session[:source] %></p>
-      <% end %>
+      <%= yield %>
+      <%= source_helper("portolio") %>
   </body>
 </html>
