--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -2,14 +2,4 @@
 
 <%= link_to "Créer un nouveau portfolio item", new_portfolio_path %>
 
-<% @portfolio_items.each do |portfolio_item| %>
-
-    <h1><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item) %></h1>
-    <p><%= portfolio_item.subtitle %></p>
-    <p><%= portfolio_item.body %></p>
-    <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
-
-<br>
-    <%= link_to "Editer le portfolio item", edit_portfolio_path(portfolio_item) %>
-    <%= link_to 'Delete Portfolio Item', portfolio_path(portfolio_item), method: :delete, data: { confirm: 'Are you sure?' } %>
-<% end %>
+<%= render partial: 'portfolio_item', collection: @portfolio_items %>
