Integrate helper method from ActionView

--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -21,7 +21,15 @@
     <%= form.text_area :body %>
   </div>
 
+            
+    <div>
+        <%= form.label :topic_id %>
+        <%= form.text_field :topic_id %>
+    </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
+
+
 <% end %>
