--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,6 @@
 <h1>Contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+
+<p><%= number_to_phone "07-81-55-76-95" %></p>
+<p><%= number_to_currency "350" %></p>
+<p><%= number_to_percentage "99.4" %></p>
+<p><%= number_with_delimiter "684536453434354" %></p>
