--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -13,6 +13,7 @@
       <p class="alert"><%= alert %></p>
         <%= yield %>
        <%= render "shared/nav", location: 'bottom' %>
+      <%= @copyright %>
       <%= source_helper("blog") %>
   </body>
 </html>
