--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -13,6 +13,8 @@
       <p class="notice"><%= notice %></p>       
       <p class="alert"><%= alert %></p>
       <%= yield %>
+      <br />
+      <%= @copyright %>
       <%= source_helper("portolio") %>
   </body>
 </html>
