--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -1,9 +1,8 @@
  <tr>
-  <td><%= blog.title.upcase %></td>
+  <td><%= link_to blog.title.upcase, blog %></td>
   <td>Published <%= distance_of_time_in_words(blog.created_at, Time.now) %> ago</td>
   <td><%= blog.body %></td>
-  <td><%= link_to blog.status, toggle_status_blog_path(blog) %></td>
-  <td><%= link_to 'Show', blog %></td>
-  <td><%= link_to 'Edit', edit_blog_path(blog) %></td>
-  <td><%= link_to 'Supprimer', blog, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  <td><%= link_to blog.status, toggle_status_blog_path(blog) if logged_in?(:site_admin) %></td>
+  <td><%= link_to 'Edit', edit_blog_path(blog) if logged_in?(:site_admin) %></td>
+  <td><%= link_to 'Supprimer', blog, method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin) %></td>
  </tr>
