--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -10,5 +10,8 @@
   <%= @blog.body %>
 </p>
 
-<%= link_to 'Edit', edit_blog_path(@blog) %> |
+<%= link_to 'Edit', edit_blog_path(@blog)  if logged_in?(:site_admin) %>
+<br />
+<br />
+<br />
 <%= link_to 'Back', blogs_path %>
