--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,8 +1,8 @@
 <div class="<%= location %>">
-    <div><%= link_to "Home", root_path %></div>
-    <div><%= link_to "A propos de moi", about_me_path %></div>
-    <div><%= link_to "Contact", contact_path %></div>
-    <div><%= link_to "Portfolios", portfolios_path %></div>
-    <div><%= link_to "Blog", blogs_path %></div>
-    <div><%= login_helper %></div>  
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
  </div>
