Update master layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,9 +19,8 @@
         <div class="cover-container">
           <%= render "shared/application_nav" %>
           <%= yield %>
-          <%= @copyright %>
           <%= source_helper("site") %>
-
+          <%= render "shared/application_footer" %>
         </div>
 
       </div>
