--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -8,7 +8,7 @@
       <%= link_to "Contact", contact_path, class:"nav-link" %>
       <%= link_to "Portfolios", portfolios_path, class:"nav-link" %>
       <%= link_to "Blog", blogs_path, class:"nav-link" %>
-      <%= login_helper %>
+      <%= login_helper 'nav-link' %>
     </nav>
   </div>
 </div>
