Make contact and about me pages re tchek for orthograph

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,6 +1,20 @@
-<h1>Contact</h1>
-
-<p><%= number_to_phone "07-81-55-76-95" %></p>
-<p><%= number_to_currency "350" %></p>
-<p><%= number_to_percentage "99.4" %></p>
-<p><%= number_with_delimiter "684536453434354" %></p>
+<h1>Contactez-nous</h1>
+<hr>
+<div class="row">
+  <div class="col-md-6">
+<h5>Adresse</h5>
+<p>44 rue Guillhemon 34500 Béziers </p>
+<h5>Télephone</h5>
+<p>07 81 55 76 95 </p>
+<h5>Email</h5>
+    <p><a href="mailto:eclavelloux@gmail.com?subject=RubyXMail" "mail">Envoyer un mail</a></p>
+</div>
+<div class="col-md-6">
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2901.656306108561!2d3.2169890157331666!3d43.342380580491124!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12b10e60097b08bf%3A0xa8e47be23d562a73!2s44+Rue+Guilhemon%2C+34500+B%C3%A9ziers!5e0!3m2!1sfr!2sfr!4v1532350954051"
+          width="450"
+          height="450"
+          frameborder="0"
+          style="border:0"
+          allowfullscreen></iframe>
+</div>
+</div>
