--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -50,8 +50,8 @@
         <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger" %></p>
       </div>
     </div>
-    <br/>
-    <div class="auth-links">
+
+    <div class="auth-links mt-2">
       <%= link_to "Back", :back %>
     </div>
   </div>
