--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -12,7 +12,7 @@
       <p class="notice"><%= notice %></p>       
       <p class="alert"><%= alert %></p>
         <%= yield %>
-       <%= render "shared/nav", location: 'bottom' %>
+       <%= render "shared/application_nav", location: 'bottom' %>
       <%= @copyright %>
       <%= source_helper("blog") %>
   </body>
