--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -2,6 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 @import "bootstrap";
+@import "font-awesome";
 /*
  * Globals
  */
@@ -169,3 +170,10 @@ h6, .h6 {
   margin-bottom: 0;
 }
 
+/*
+ * Custom styles
+ */
+.social-links li
+{
+  font-size: 2.5em;
+}
