--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -3,29 +3,14 @@
     <h4>A propos</h4>
     <p>Ce blog ne contient  <em>pas que</em> des articles sur le monde du développement ou des astuces pour développeurs, celui-ci peut aussi en effet parler de cinéma, Jeux vidéo ou Manga suivant les envies du moment.</p>
   </div>
-  <div class="sidebar-module">
-    <h4>Archives</h4>
-    <ol class="list-unstyled">
-      <li><a href="#">March 2014</a></li>
-      <li><a href="#">February 2014</a></li>
-      <li><a href="#">January 2014</a></li>
-      <li><a href="#">December 2013</a></li>
-      <li><a href="#">November 2013</a></li>
-      <li><a href="#">October 2013</a></li>
-      <li><a href="#">September 2013</a></li>
-      <li><a href="#">August 2013</a></li>
-      <li><a href="#">July 2013</a></li>
-      <li><a href="#">June 2013</a></li>
-      <li><a href="#">May 2013</a></li>
-      <li><a href="#">April 2013</a></li>
-    </ol>
-  </div>
+
   <div class="sidebar-module">
     <h4>Elsewhere</h4>
-    <ol class="list-unstyled">
-      <li><a href="#">GitHub</a></li>
-      <li><a href="#">Twitter</a></li>
-      <li><a href="#">Facebook</a></li>
+    <ol class="list-unstyled social-links">
+      <li><a href="#"><%= fa_icon "github" %></a></li>
+      <li><a href="#"><%= fa_icon "twitter" %></a></li>
+      <li><a href="#"><%= fa_icon "facebook" %></a></li>
+      <li><a href="#"><%= fa_icon "instagram" %></a></li>
     </ol>
   </div>
 </div>
