Try to put jQuery inside the project(without sucess) and implemente the html and css for portfolio

--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title><%= @page_title %></title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -9,12 +11,11 @@
     <%= javascript_include_tag 'portfolios', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
-      <%= render "shared/nav", location: 'top' %>
-      <p class="notice"><%= notice %></p>       
-      <p class="alert"><%= alert %></p>
+      <%= render "shared/portfolio_navbar" %>
+      <%= render "shared/portfolio_masterhead" %>
       <%= yield %>
       <br />
-      <%= @copyright %>
+      <%= render "shared/portfolio_footer" %>
       <%= source_helper("portolio") %>
   </body>
 </html>
