--- a/app/views/shared/_portfolio_footer.html.erb
+++ b/app/views/shared/_portfolio_footer.html.erb
@@ -3,7 +3,8 @@
     <p class="float-right">
       <a href="#">Revenir en haut</a>
     </p>
-    <p<%= @copyright %></p>
-    <p>Envie de prendre contact <%= link_to "Visitez notre site", root_path %> ou <%= link_to "Prenez directement contact", contact_path %> avec nous</p>
+    <p>
+      <%= @copyright %>
+    </p>
   </div>
 </footer>
