--- a/app/views/shared/_portfolio_masterhead.html.erb
+++ b/app/views/shared/_portfolio_masterhead.html.erb
@@ -1,10 +1,13 @@
+
 <section class="jumbotron text-center">
   <div class="container">
-    <h1 class="jumbotron-heading">Album example</h1>
-    <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
+    <h1 class="jumbotron-heading">Exemple de projets</h1>
+    <p class="lead text-muted">Ceci sont les projets sur lequelle nous avons collaborer, participer ou réaliser nous
+      vous invitons à les consulter, cela peut vous donner des idées de comment nous travaillons et du résultat que
+      vous pouvez obtenir en travaillant avec nous</p>
     <p>
-      <a href="#" class="btn btn-primary">Main call to action</a>
-      <a href="#" class="btn btn-secondary">Secondary action</a>
+      <%= link_to 'Contactez-nous', about_me_path, class: 'btn btn-primary' %>
+      <%= link_to 'Le blog', blogs_path, class: 'btn btn-secondary' %>
     </p>
   </div>
 </section>
