--- a/app/views/shared/_portfolio_navbar.html.erb
+++ b/app/views/shared/_portfolio_navbar.html.erb
@@ -1,39 +1,41 @@
-<!--<div class="collapse bg-inverse" id="navbarHeader">-->
-<!--  <div class="container">-->
-<!--    <div class="row">-->
-<!--      <div class="col-sm-8 py-4">-->
-<!--        <h4 class="text-white">About</h4>-->
-<!--        <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>-->
-<!--      </div>-->
-<!--      <div class="col-sm-4 py-4">-->
-<!--        <h4 class="text-white">Contact</h4>-->
-<!--        <ul class="list-unstyled">-->
-<!--          <li><a href="#" class="text-white">Follow on Twitter</a></li>-->
-<!--          <li><a href="#" class="text-white">Like on Facebook</a></li>-->
-<!--          <li><a href="#" class="text-white">Email me</a></li>-->
-<!--        </ul>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</div>-->
-<!--<div class="navbar navbar-inverse bg-inverse">-->
-<!--  <div class="container d-flex justify-content-between">-->
-<!--    <a href="#" class="navbar-brand">Album</a>-->
-<!--    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">-->
-<!--      <span class="navbar-toggler-icon"></span>-->
-<!--    </button>-->
-<!--  </div>-->
-<!--</div>-->
-
-<div class="portfolio-masthead">
+<div class="bg-dark" id="navbarHeader">
   <div class="container">
-    <nav class="nav portfolio-nav">
-      <%= link_to "Home", root_path, class: 'nav-link active' %>
-      <%= link_to "A propos de moi", about_me_path, class: 'nav-link' %>
-      <%= link_to "Contact", contact_path, class: 'nav-link' %>
-      <%= link_to "Blog", blogs_path, class: 'nav-link' %>
-      <%= link_to "Portfolio", portfolios_path, class: 'nav-link' %>
-      <%= login_helper 'nav-link' %>
-    </nav>
+    <div class="row">
+      <div class="col-sm-8 py-4">
+        <h4 class="text-white">Projects</h4>
+        <p class="text-muted">Ici vous pourrez voir tous les projets sur lesquelle à travailler l'équipe de RubyX Devellopement</p>
+      </div>
+      <div class="col-sm-4 py-4">
+        <ul class="list-unstyled">
+          <li><%= link_to "Home", root_path, class: 'text-white' %></li>
+          <li><%= link_to "A propos de moi", about_me_path, class: 'text-white' %></li>
+          <li><%= link_to "Contact", contact_path, class: 'text-white' %></li>
+          <li><%= link_to "Blog", blogs_path, class: 'text-white' %></li>
+          <li><%= link_to "Portfolio", portfolios_path, class: 'text-white' %></li>
+          <li><%= login_helper 'text-white'%></li>
+        </ul>
+      </div>
+    </div>
   </div>
 </div>
+<div class="navbar navbar-inverse bg-dark">
+  <div class="container d-flex justify-content-between">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  </div>
+</div>
+
+
+<!--<div class="portfolio-masthead">-->
+<!--  <div class="container">-->
+<!--    <nav class="nav portfolio-nav">-->
+      <%#= link_to "Home", root_path, class: 'nav-link active' %>
+      <%#= link_to "A propos de moi", about_me_path, class: 'nav-link' %>
+      <%#= link_to "Contact", contact_path, class: 'nav-link' %>
+      <%#= link_to "Blog", blogs_path, class: 'nav-link' %>
+      <%#= link_to "Portfolio", portfolios_path, class: 'nav-link' %>
+      <%#= login_helper 'nav-link' %>
+<!--    </nav>-->
+<!--  </div>-->
+<!--</div>-->
