--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -1,18 +1,21 @@
-<br />
-<h1><%= @portfolio_item.title %></h1>
-<br />
-<%= image_tag @portfolio_item.main_image unless @portfolio_item.main_image.nil? %>
-<br>
+<div class="container">
+  <div class="row">
+    <div class="col-md-7">
+      <%= image_tag @portfolio_item.main_image, class: 'img-fluid' unless @portfolio_item.main_image.nil? %>
+    </div>
+    <div class="col-md-5">
+      <h1><%= @portfolio_item.title %></h1>
+      <hr>
+      <em><%= @portfolio_item.subtitle %></em>
+      <p><%= @portfolio_item.body %></p>
+      <hr>
+      <h3>Technologies used</h3>
+      <% @portfolio_item.technologies.each do |t| %>
+        <p><%= t.name %></p>
+      <% end %>
+    </div>
+  </div>
+</div>
 
 
 
-<em><%= @portfolio_item.subtitle %></em>
-
-<p><%= @portfolio_item.body %></p>
-
-<h2>Technologies used</h2>
-<% @portfolio_item.technologies.each do |t| %>
-<p><%= t.name %></p>
-<% end %>
-
-<%= link_to "Retour", portfolios_path %>
