--- a/app/views/shared/_portfolio_footer.html.erb
+++ b/app/views/shared/_portfolio_footer.html.erb
@@ -1,6 +1,7 @@
 <footer class="text-muted">
   <div class="container">
     <p class="float-right">
+      <%= link_to "Voir tous les projets", portfolios_path %> /
       <a href="#">Revenir en haut</a>
     </p>
     <p>
