Implemente styles for portfolio form

--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -58,8 +58,17 @@ footer p {
   margin-bottom: .25rem;
 }
 
+/*
+ * Custom Styles
+ */
+
 .portfolio-masthead
 {
   margin: 0 35em;
   float: right;
+}
+
+.portfolio-form
+{
+  padding: 20px;
 }
