--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -1,2 +1,4 @@
-<h1>Créer un nouveau Portfolio Item</h1>
-<%= render 'form', portfolio_item: @portfolio_item %>
+<div class="container portfolio-form">
+  <h1>Créer un nouveau Portfolio Item</h1>
+  <%= render 'form', portfolio_item: @portfolio_item %>
+</div>
