--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -1,55 +1,77 @@
 <%= form_for(@portfolio_item) do |f| %>
-  
-  <div class="field">
-    <%= f.label :title %>
-    <%= f.text_field :title %>
-  </div>
-    
-  <div class="field">
-    <%= f.label :subtitle %>
-    <%= f.text_field :subtitle %>
-  </div>
 
-  <div class="field">
-    <%= f.label :body %>
-    <%= f.text_area :body %>
-  </div>
-  
-  <div class="field">
-    <%= f.label :main_image %>
-    <%= f.text_area :main_image %>
-  </div>
-    
-    <div>
+  <div class="row">
+
+    <div class="col-md-6">
+
+      <div class="form-group">
+        <%= f.label :title %>
+        <%= f.text_field :title, class: 'form-control' %>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="form-group">
+        <%= f.label :subtitle %>
+        <%= f.text_field :subtitle, class: 'form-control' %>
+      </div>
+    </div>
+    <div class="col-md-12">
+
+      <div class="form-group">
+        <%= f.label :body %>
+        <%= f.text_area :body, class: 'form-control', rows: 13 %>
+      </div>
+
+    </div>
+    <div class="col-md-6">
+
+      <div class="form-group">
+        <%= f.label :main_image %>
+        <%= f.text_area :main_image, class: 'form-control' %>
+      </div>
+
+      <div>
         <p> previsualisation de l'image principal</p>
-        <%= image_tag @portfolio_item.main_image %>
+        <%= image_tag @portfolio_item.main_image, class:'img-fluid' %>
+      </div>
     </div>
-  <div class="field">
-    <%= f.label :thumb_image %>
-    <%= f.text_field :thumb_image %>
-  </div>
-    
-    <div>
+    <div class="col-md-6">
+      <div class="form-group">
+        <%= f.label :thumb_image %>
+        <%= f.text_field :thumb_image, class: 'form-control' %>
+      </div>
+
+      <div>
         <p> previsualisation de la thumb image</p>
-        <%= image_tag @portfolio_item.thumb_image %>
+        <%= image_tag @portfolio_item.thumb_image, class:'img-fluid' %>
+      </div>
+
+    </div>
+    <div class="col-md-12">
+
+      <div>
+        <h2>Nom des technologies utilisées</h2>
+        <div class="form-group">
+          <%= f.fields_for :technologies do |technology_form| %>
+            <div class="form-group">
+              <%= technology_form.label :name %>
+              <%= technology_form.text_field :name, class: 'form-control' %>
+            </div>
+          <% end %>
+        </div>
+
+        <div class="form-group">
+          <%= f.submit "Valider", class: 'btn btn-primary btn-block' %>
+        </div>
+
+      </div>
+
     </div>
 
-    <div>
-        <p>Nom des technologies utilisées</p>
-      <ul>
-         <%= f.fields_for :technologies do |technology_form| %>
-         <li>
-          <%= technology_form.label :name %>
-           <%= technology_form.text_field :name %>
-         </li>
-         <% end %>
-     </ul>
-    </div>
 
-  <div class="actions">
-    <%= f.submit %>
+
+
+
+
+        <% end %>
   </div>
-
-
-  
-<% end %>
