--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -8,7 +8,7 @@
     <%= csp_meta_tag %>
     <meta name="keywords" content="<%=@seo_keywords %>" />
     <%= stylesheet_link_tag    'portfolios', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'portfolios', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
       <%= render "shared/portfolio_navbar" %>
