--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -1,7 +1,9 @@
-<div class="card">
-  <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
-  <p class="card-text">
-    <span><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item) %></span>
-    <%= portfolio_item.subtitle %>
-  </p>
+<div class="col-sm-6 col-md-4 ">
+  <div class="card w-100">
+    <%= image_tag portfolio_item.thumb_image, class: 'img-fluid' unless portfolio_item.thumb_image.nil? %>
+    <p class="card-text">
+      <span><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item) %></span>
+      <%= portfolio_item.subtitle %>
+    </p>
+  </div>
 </div>
