--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -3,6 +3,7 @@
     <div class="row">
       <%= link_to "Créer un nouveau portfolio", new_portfolio_path if logged_in?(:site_admin) %>
       <%= render partial: 'portfolio_item', collection: @portfolio_items %>
+      </div>
     </div>
   </div>
 </div>
