--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -2,12 +2,8 @@
 <div class="masthead clearfix">
   <div class="inner">
     <h3 class="masthead-brand">RubyX Dev</h3>
-    <nav class="nav nav-masthead">
-      <%= link_to "Home", root_path, class:"nav-link active" %>
-      <%= link_to "A propos de moi", about_me_path, class:"nav-link" %>
-      <%= link_to "Contact", contact_path, class:"nav-link" %>
-      <%= link_to "Portfolios", portfolios_path, class:"nav-link" %>
-      <%= link_to "Blog", blogs_path, class:"nav-link" %>
+    <nav class="nav nav-masthead app-nav">
+      <%= nav_helper 'nav-link', 'span' %>
       <%= login_helper 'nav-link' %>
     </nav>
   </div>
