Implemente drag and drop interface (oh yeah)

--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -13,6 +13,7 @@
   <body>
       <%= render "shared/portfolio_navbar" %>
       <%= render "shared/portfolio_masterhead" unless logged_in?(:site_admin) %>
+      <%= link_to "Créer un nouveau portfolio", new_portfolio_path if logged_in?(:site_admin) %>
       <%= yield %>
       <br />
       <%= render "shared/portfolio_footer" %>
