--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -1,5 +1,5 @@
 <div class="col-sm-6 col-md-4 ">
-  <div class="card w-100">
+  <div class="card w-100" data-id="<%= portfolio_item.id %>">
     <%= image_tag portfolio_item.thumb_image, class: 'img-fluid' unless portfolio_item.thumb_image.nil? %>
     <p class="card-text">
       <span><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item) %></span>
