Implemente image for about-me section

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,14 +1,18 @@
 <h1>A propos</h1>
 <br/>
-<p>Je m'appelle Enzo Clavelloux et je suis auto-entrepreneur et patron (de faite) de RubyX développement. </p>
-<br />
-<p>Après une formation de développeur logiciel au sein de l'école Simplon.co et travailler dans plusieurs entreprises dans des secteures différents (e-commerce, application de géolocalisation et jeux vidéo) j'ai décider de me monter
-en freelance.</p>
-<br/>
-<p>La question est pourquoi choisir cette entreprise plutôt qu'une autre ? Et bien pour plusieurs raison.</p>
-<p>La première raison est le language utilisés, la plupart des sites sont en PHP avec des Framworks tel que Symfony 4/3 ou CodeIgniter ou encore avec des CMS tel que Wordpress. Chez nous on a décidés de mettre en place une solution
-innovante en utilisant Ruby On Rails un framwork pour le language Ruby qui est extrémement puissant et robuste et qui permet de sortir des 1ere version de sites extrèmement rapidement. </p>
-<br/>
-<p>La deuxième c'est que vous aurez des comptes-rendus à la fréquence que vous souhaitez afin que les étapes de développement de votre site n'ait aucun secret pour vous</p>
-<br/>
-<p>Donc si vous etes une entreprise qui cherche à créer un site qu'il soit vitrine ou nécessitant une base de données de manière extrement rapide et avec les clef pour pouvoir l'administrer vous-mêmes n'hésiter plus et contacter nous</p>
+<div class="row">
+  <div class="col-md-4">
+    <%= image_tag "Enzo_Clavelloux.jpg", width: 300, alt: "Image de profil"%>
+  </div>
+  <div class="col-md-8">
+    <p>Je m'appelle Enzo Clavelloux et je suis auto-entrepreneur et patron (de faite) de RubyX développement.
+    Après une formation de développeur logiciel au sein de l'école Simplon.co et travailler dans plusieurs entreprises dans des secteures différents (e-commerce, application de géolocalisation et jeux vidéo) j'ai décider de me monter
+      en freelance.</p>
+    <p>La question est pourquoi choisir cette entreprise plutôt qu'une autre ? Et bien pour plusieurs raison.</p>
+    <p>La première raison est le language utilisés, la plupart des sites sont en PHP avec des Framworks tel que Symfony 4/3 ou CodeIgniter ou encore avec des CMS tel que Wordpress. Chez nous on a décidés de mettre en place une solution
+      innovante en utilisant Ruby On Rails un framwork pour le language Ruby qui est extrémement puissant et robuste et qui permet de sortir des 1ere version de sites extrèmement rapidement.
+    La deuxième c'est que vous aurez des comptes-rendus à la fréquence que vous souhaitez afin que les étapes de développement de votre site n'ait aucun secret pour vous</p>
+    <p>Donc si vous etes une entreprise qui cherche à créer un site qu'il soit vitrine ou nécessitant une base de données de manière extrement rapide et avec les clef pour pouvoir l'administrer vous-mêmes n'hésiter plus et contacter nous</p>
+
+  </div>
+</div>
