Add file upload to the portfolio form

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <div class="site-wrapper">
 
       <div class="site-wrapper-inner">
-        <% if @page_title == "Home"%>
+        <% if @page_title == "Rubyx developpement | Portfolio Enzo Clavelloux"%>
           <div class= "background-main"%></div>
           <% else %>
           <div class="background-default" %></div>
