--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -27,23 +27,14 @@
 
       <div class="form-group">
         <%= f.label :main_image %>
-        <%= f.text_area :main_image, class: 'form-control' %>
+        <%= f.file_field :main_image, class: 'form-control', id: 'file-upl', onchange: "ImagePreview" %>
       </div>
 
-      <div>
-        <p> previsualisation de l'image principal</p>
-        <%= image_tag @portfolio_item.main_image, class:'img-fluid' %>
-      </div>
     </div>
     <div class="col-md-6">
       <div class="form-group">
         <%= f.label :thumb_image %>
-        <%= f.text_field :thumb_image, class: 'form-control' %>
-      </div>
-
-      <div>
-        <p> previsualisation de la thumb image</p>
-        <%= image_tag @portfolio_item.thumb_image, class:'img-fluid' %>
+        <%= f.file_field :thumb_image, class: 'form-control', id: 'file-upl' %>
       </div>
 
     </div>
@@ -75,3 +66,20 @@
 
         <% end %>
   </div>
+
+<script>
+    function ImagePreview() {
+        var PreviewIMG = document.getElementById('img-upl');
+        var UploadFile    =  document.getElementById('file-upl').files[0];
+        var ReaderObj  =  new FileReader();
+        ReaderObj.onloadend = function () {
+            PreviewIMG  = "url("+ ReaderObj.result+")";
+        }
+        if (UploadFile) {
+            ReaderObj.readAsDataURL(UploadFile);
+        } else {
+            PreviewIMG.style.backgroundImage  = "";
+        }
+    }
+
+</script>
