--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container portfolio-form">
+<div class="container portfolio-container">
   <h1>Créer un nouveau Portfolio Item</h1>
   <%= render 'form', portfolio_item: @portfolio_item %>
 </div>
