--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -44,11 +44,9 @@
         <h2>Nom des technologies utilisées</h2>
         <div class="form-group">
           <%= f.fields_for :technologies do |technology_form| %>
-            <div class="form-group">
-              <%= technology_form.label :name %>
-              <%= technology_form.text_field :name, class: 'form-control' %>
-            </div>
+            <%= render 'technology_fields', f: technology_form %>
           <% end %>
+          <div><%= link_to_add_association 'Rajouter une technologie', f, :technologies %></div>
         </div>
 
         <div class="form-group">
