--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -13,6 +13,11 @@
       <% @portfolio_item.technologies.each do |t| %>
         <p><%= t.name %></p>
       <% end %>
+      <% if logged_in?(:site_admin) %>
+        <div>
+          <%= link_to "Editer le portfolio", edit_portfolio_path(@portfolio_item), class: 'btn btn-warning' %>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
