--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -13,6 +13,9 @@
   <body>
       <%= render "shared/portfolio_navbar" %>
       <%= render "shared/portfolio_masterhead" unless logged_in?(:site_admin) %>
+      <% flash.each do |key, value| %>
+    <div class="alert alert-<%= key %>"><%= value %></div>
+  <% end %>
       <%= yield %>
       <br />
       <%= render "shared/portfolio_footer" %>
