--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -12,11 +12,11 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.text_field :title, class: 'form-control', placeholder: 'Titre' %>
+    <%= f.text_field :title, class: 'form-control', placeholder: 'Titre' %> Ce champs est requis
   </div>
 
   <div class="form-group">
-    <%= f.text_area :body, class: 'form-control', rows: "15", placeholder: 'Contenus' %>
+    <%= f.text_area :body, class: 'form-control', rows: "15", placeholder: 'Contenus' %> Ce champs est requis
   </div>
 
   <div class="form-group">
