--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -1,24 +1,34 @@
 <%= form_for(@portfolio_item) do |f| %>
+  <% if portfolio_item.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(portfolio_item.errors.count, "erreurs") %> empeche le portfolio d'être sauvegarder</h2>
 
+      <ul>
+        <% portfolio_item.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
   <div class="row">
 
     <div class="col-md-6">
 
       <div class="form-group">
-        <%= f.label :title %>
+        <%= f.label :title %>  *
         <%= f.text_field :title, class: 'form-control' %>
       </div>
     </div>
     <div class="col-md-6">
       <div class="form-group">
-        <%= f.label :subtitle %>
+        <%= f.label :subtitle %> *
         <%= f.text_field :subtitle, class: 'form-control' %>
       </div>
     </div>
     <div class="col-md-12">
 
       <div class="form-group">
-        <%= f.label :body %>
+        <%= f.label :body %> *
         <%= f.text_area :body, class: 'form-control', rows: 13 %>
       </div>
 
@@ -56,11 +66,6 @@
       </div>
 
     </div>
-
-
-
-
-
 
         <% end %>
   </div>
