--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,5 +1,12 @@
 <div class="album text-muted">
   <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <% if logged_in?(:site_admin) %>
+          <%= link_to "Créer un nouveaux projets", new_portfolio_path, class: 'btn btn-primary' %>
+        <% end %>
+      </div>
+    </div>
     <div class="row <%= "sortable" if logged_in?(:site_admin)%>">
       <%= render partial: 'portfolio_item', collection: @portfolio_items %>
       </div>
