--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -4,19 +4,7 @@
   <%= link_to 'Back', blogs_path %>
   <hr>
   <p><%= @blog.body %></p>
-
-
-  <% unless current_user.is_a? GuestUser %>
-    <%= form_for @comment, url: '#' do |f| %>
-      <div class="form-group">
-        <%= f.label :content %>
-        <%= f.text_area :content, class: 'form-control' %>
-      </div>
-
-      <%= f.submit 'Poster le commentaire', class: 'btn btn-primary' %>
-    <% end %>
-  <% end %>
-
+  <%= render 'comments/comment_form' %>
   <%= render @blog.comments %>
 
 </div>
