--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -5,8 +5,9 @@
   <hr>
   <p><%= @blog.body %></p>
   <%= render 'comments/comment_form' %>
-  <%= render @blog.comments %>
-
+  <div id="comments" data-blog-id="<%= @blog.id %>">
+   <%= render @blog.comments %>
+  </div>
 </div>
 
 
