--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -159,14 +159,17 @@ h6, .h6 {
  * Footer
  */
 
-.blog-footer {
+.blog-footer
+{
+  margin-top: 20px;
   padding: 2.5rem 0;
   color: #999;
   text-align: center;
   background-color: #f9f9f9;
   border-top: .05rem solid #e5e5e5;
 }
-.blog-footer p:last-child {
+.blog-footer p:last-child
+{
   margin-bottom: 0;
 }
 
@@ -176,4 +179,23 @@ h6, .h6 {
 .social-links li
 {
   font-size: 2.5em;
+}
+
+.comment-card > .card
+{
+  margin-right: 20px;
+  padding-left: 20px;
+  padding-top: 20px;
+  margin-top: 15px;
+}
+
+.comment-attribut
+{
+  font-size: .8em;
+  font-style: italic;
+}
+
+.comment-name
+{
+  font-weight: 700;
 }
