--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,5 +1,5 @@
 <div class="col-sm-8 blog-main">
-  <h2><%= @blog.title %></h2>
+  <h2><%= @blog.title %></h2><h4><%= @blog.topic.title %></h4>
   <%= link_to 'Edit', edit_blog_path(@blog)  if logged_in?(:site_admin) %>
   <%= link_to 'Back', blogs_path %>
   <hr>
@@ -9,6 +9,3 @@
     <%= render @blog.comments%>
   </div>
 </div>
-
-
-
