--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -4,6 +4,13 @@
     <p>Ce blog ne contient  <em>pas que</em> des articles sur le monde du développement ou des astuces pour développeurs, celui-ci peut aussi en effet parler de cinéma, Jeux vidéo ou Manga suivant les envies du moment.</p>
   </div>
 
+    <div class="sidebar-module">
+      <h4>Catégories</h4>
+      <% @side_bar_topics.each do |topic| %>
+        <p><%= link_to topic.title, topic_path(topic) %></p>
+      <% end %>
+    </div>
+
   <div class="sidebar-module">
     <h4>Elsewhere</h4>
     <ol class="list-unstyled social-links">
