--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -17,6 +17,14 @@
   </div>
 
   <div class="form-group">
+    <%= f.radio_button :status, 'draft' %>
+    <%= f.label :status, 'Brouillon' %>
+
+    <%= f.radio_button :status, 'published' %>
+    <%= f.label :status, 'Publié' %>
+  </div>
+
+  <div class="form-group">
     <%= f.text_area :body, class: 'form-control', rows: "15", placeholder: 'Contenus' %> Ce champs est requis
   </div>
 
