Rajout d'icon et mise en page pour le blog

--- a/app/views/shared/_blog_masthead.html.erb
+++ b/app/views/shared/_blog_masthead.html.erb
@@ -2,7 +2,6 @@
   <div class="container">
     <h1 class="blog-title"><%= link_to "RubyX Blog", blogs_path %></h1>
     <p class="lead blog-description">Bienvenue sur le blog de RubyX Dev ici vous pourrez découvrir nos centres d'intêrets.</p>
-    <span><%= link_to 'Créer un nouvel article', new_blog_path if logged_in?(:site_admin) %></span> |
-    <span><%= link_to 'Catégories', topics_path %></span>
+    <span><%= link_to 'Créer un nouvel article', new_blog_path if logged_in?(:site_admin) %></span>
   </div>
 </div>
