--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -3,11 +3,12 @@
   <h2 class="blog-post-title"><%= link_to blog.title.upcase, blog %></h2>
   <p class="blog-post-meta">Published <%= distance_of_time_in_words(blog.created_at, Time.now) %> ago</p>
   <% if logged_in?(:site_admin) %>
+  <h4>Espace adminsitration</h4>
     <p class="blog-post-meta"><%= link_to blog.status, toggle_status_blog_path(blog)%> /
-    <%= link_to 'Edit', edit_blog_path(blog) %> /
-    <%= link_to 'Supprimer', blog, method: :delete, data: { confirm: 'Are you sure?' } %>
+    <%= link_to fa_icon('pencil-square-o'), edit_blog_path(blog) %> /
+    <%= link_to fa_icon('trash'), blog, method: :delete, data: { confirm: ' Voulez-vous suprimer ' + blog.title + ' définitivement' } %>
     </p>
   <% end %>
-  <p><%= blog.body %></p>
+  <p><%= markdown blog.body %></p>
   <hr>
 </div>
