--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,7 +1,25 @@
 <div class="col-sm-8 blog-main">
-  <h2><%= @blog.title %></h2><h4><%= @blog.topic.title %></h4>
-  <%= link_to 'Edit', edit_blog_path(@blog)  if logged_in?(:site_admin) %>
-  <%= link_to 'Back', blogs_path %>
+
+  <% if logged_in?(:site_admin) %>
+    <h3>Espace Administration</h3>
+    <span class="breadcrumb pull-right">
+      <%= link_to fa_icon('pencil-square-o'), edit_blog_path(@blog), class: "breadcrumb-item" %>
+      <%= link_to fa_icon('trash'), @blog, method: :delete, data: { confirm: ' Voulez-vous suprimer ' + @blog.title + ' définitivement' }, class: "breadcrumb-item" %>
+    </span>
+  <% end %>
+
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <%= link_to "Home", root_path, class: "breadcrumb-item" %>
+      <%= link_to 'Blog', blogs_path, class: "breadcrumb-item" %>
+      <%= link_to "Catégories", topics_path, class: "breadcrumb-item" %>
+      <%= link_to @blog.topic.title,topic_path(@blog.topic), class: "breadcrumb-item" %>
+      <span class="breadcrumb-item active" aria-current="page"><%= @blog.title %></span>
+    </ol>
+  </nav>
+
+  <h2><%= @blog.title %></h2>
+
   <hr>
   <p><%= markdown @blog.body %></p>
   <%= render 'comments/comment_form' %>
