Integration et style du source_helper

--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,5 +1,6 @@
 <div class="album text-muted">
   <div class="container">
+    <%= source_helper("alert alert-warning") %>
     <div class="row">
       <div class="col-md-12">
         <% if logged_in?(:site_admin) %>
