--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -4,6 +4,8 @@
     <p>Ce blog ne contient  <em>pas que</em> des articles sur le monde du développement ou des astuces pour développeurs, celui-ci peut aussi en effet parler de cinéma, Jeux vidéo ou Manga suivant les envies du moment.</p>
   </div>
 
+    <%= source_helper("alert alert-info") %>
+
     <div class="sidebar-module">
       <h4>Catégories</h4>
       <% @side_bar_topics.each do |topic| %>
