Update style de la page about avec collapse card

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -15,7 +15,63 @@
             innovante en utilisant Ruby On Rails un framwork pour le language Ruby qui est extrémement puissant et robuste et qui permet de sortir des 1ere version de sites extrèmement rapidement.
             La deuxième c'est que vous aurez des comptes-rendus à la fréquence que vous souhaitez afin que les étapes de développement de votre site n'ait aucun secret pour vous</p>
             <p>Donc si vous etes une entreprise qui cherche à créer un site qu'il soit vitrine ou nécessitant une base de données de manière extrement rapide et avec les clef pour pouvoir l'administrer vous-mêmes n'hésiter plus et contacter nous</p>
+
+            <p>
+              <button
+              class="btn btn-primary"
+              type="button"
+              data-toggle="collapse"
+              data-target="#jobHistory"
+              aria-expended="false"
+              aria-controls="jobHistory"
+              >
+              Job History
+            </button>
+
+            <button
+            class="btn btn-primary"
+            type="button"
+            data-toggle="collapse"
+            data-target="#education"
+            aria-expended="false"
+            aria-controls="education"
+            >
+            Education
+          </button>
+        </p>
+
+        <p>
+          <div class="collapse" id="jobHistory">
+            <div class="card card-block">
+              Job1
+            </div>
+            <div class="card card-block">
+              Job2
+            </div>
+            <div class="card card-block">
+              Job3
+            </div>
+            <div class="card card-block">
+              Job4
+            </div>
           </div>
-        </div>
+
+          <div class="collapse" id="education">
+            <div class="card card-block">
+              Education 1
+            </div>
+            <div class="card card-block">
+              Education 2
+            </div>
+            <div class="card card-block">
+              Education 3
+            </div>
+            <div class="card card-block">
+              Education 4
+            </div>
+          </div>
+        </p>
       </div>
     </div>
+  </div>
+</div>
