--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -3,9 +3,21 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 @import "bootstrap";
 @import "font-awesome";
+
+@font-face
+{
+  font-family: 'Lato';
+  src: font-url('Lato-Regular.ttf');
+}
+
+@font-face
+{
+  font-family: 'Roboto Slab';
+  src: font-url('RobotoSlab-Regular.ttf');
+}
 /*
- * Globals
- */
+* Globals
+*/
 
 @media (min-width: 48em) {
   html {
@@ -15,7 +27,7 @@
 
 body {
   padding-top: 80px;
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: 'Lato', sans-serif;
   color: #555;
 }
 
@@ -25,15 +37,15 @@ h3, .h3,
 h4, .h4,
 h5, .h5,
 h6, .h6 {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Roboto Slab', serif;
   font-weight: normal;
   color: #333;
 }
 
 
 /*
- * Override Bootstrap's default container.
- */
+* Override Bootstrap's default container.
+*/
 
 .container {
   max-width: 60rem;
@@ -41,8 +53,8 @@ h6, .h6 {
 
 
 /*
- * Masthead for nav
- */
+* Masthead for nav
+*/
 
 .blog-masthead {
   margin-bottom: 3rem;
@@ -84,8 +96,8 @@ h6, .h6 {
 
 
 /*
- * Blog name and description
- */
+* Blog name and description
+*/
 
 .blog-header {
   padding-bottom: 1.25rem;
@@ -110,8 +122,8 @@ h6, .h6 {
 
 
 /*
- * Main column and sidebar layout
- */
+* Main column and sidebar layout
+*/
 
 /* Sidebar modules for boxing content */
 .sidebar-module {
@@ -140,8 +152,8 @@ h6, .h6 {
 
 
 /*
- * Blog posts
- */
+* Blog posts
+*/
 
 .blog-post {
   margin-bottom: 4rem;
@@ -157,8 +169,8 @@ h6, .h6 {
 
 
 /*
- * Footer
- */
+* Footer
+*/
 
 .blog-footer
 {
@@ -175,8 +187,8 @@ h6, .h6 {
 }
 
 /*
- * Custom styles
- */
+* Custom styles
+*/
 .social-links li
 {
   font-size: 2.5em;
@@ -208,5 +220,18 @@ h6, .h6 {
 
 .blogcrumb a
 {
-    margin: 0px 10px;
+  margin: 0px 10px;
+}
+
+.blog-nav {
+  margin-top: -5em;
+}
+.blog-sidebar-source
+{
+  margin-top: 20px;
+}
+
+.blog-header
+{
+    margin-top: 30px;
 }
