--- a/app/views/shared/_blog_nav.html.erb
+++ b/app/views/shared/_blog_nav.html.erb
@@ -1,14 +1,16 @@
-<nav class="navbar navbar-toogleable-md navbar-dark bg-dark fixed-top">
-  <%= link_to "RubyX Blog", blogs_path, class: 'navbar-brand' %>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-md navbar-light bg-faded blog-nav">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+
   <div class="container">
-    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-     <ul class="navbar-nav mr-auto">
-       <%= nav_helper 'nav-link', 'span' %>
-   <%= login_helper 'nav-link' %>
-     </ul>
- </div>
+    <%= link_to "RubyX Blog", blogs_path, class: 'navbar-brand' %>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <%= nav_helper 'nav-link', 'li' %>
+        <%= login_helper 'nav-link' %>
+      </ul>
+    </div>
   </div>
 </nav>
